--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ tasks.named('test') {
 }
 
 jar {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
 	manifest {
 		attributes "Main-Class": "com.ryanair.finterconnection.FinterconnectionApplication"
 	}
