Defines a basic controller with two clients for routes and schedules.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+# Global configuration
+server.port=8282
 
+# Ryanair services
+ryanair.services.url=https://services-api.ryanair.com/
+ryanair.routes.path=locate/3/routes
+ryanair.schedules.path=timtbl/3/schedules
