Adds context path definition into configuration properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Global configuration
 server.port=8282
+server.servlet.context-path=/ryanair/flights
 
 # Ryanair services
 ryanair.services.url=https://services-api.ryanair.com/
