Adds timeout to client api connections

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Global configuration
 server.port=8282
 server.servlet.context-path=/ryanair/flights
+request.timeout.seconds=7
 
 # Ryanair services
 ryanair.services.url=https://services-api.ryanair.com/
