It tests git worktree.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ request.timeout.seconds=7
 ryanair.services.url=https://services-api.ryanair.com/
 ryanair.routes.path=locate/3/routes
 ryanair.schedules.path=timtbl/3/schedules
+
+# Git Worktree test
+made.up.variable=true
